[package]
name = "bascoin-consensus"
description = "Bascoin consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
async-channel.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
bascoin-addresses.workspace = true
bascoin-consensus-core.workspace = true
bascoin-consensus-notify.workspace = true
bascoin-consensusmanager.workspace = true
bascoin-core.workspace = true
bascoin-database.workspace = true
bascoin-hashes.workspace = true
bascoin-math.workspace = true
bascoin-merkle.workspace = true
bascoin-muhash.workspace = true
bascoin-notify.workspace = true
bascoin-pow.workspace = true
bascoin-txscript.workspace = true
bascoin-txscript-errors.workspace = true
bascoin-utils.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true

rand = { workspace = true, features = ["small_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
flate2.workspace = true
rand_distr.workspace = true
bascoin-txscript-errors.workspace = true
bascoin-addresses.workspace = true

[[bench]]
name = "parallel_muhash"
harness = false

[[bench]]
name = "check_scripts"
harness = false

[features]
html_reports = []
devnet-prealloc = ["bascoin-consensus-core/devnet-prealloc"]

[lints]
workspace = true
