[package]
name = "bascoin-mining"
description = "Bascoin mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bascoin-addresses.workspace = true
bascoin-consensus-core.workspace = true
bascoin-consensusmanager.workspace = true
bascoin-core.workspace = true
bascoin-hashes.workspace = true
bascoin-mining-errors.workspace = true
bascoin-muhash.workspace = true
bascoin-txscript.workspace = true
bascoin-utils.workspace = true

futures-util.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
smallvec.workspace = true
sweep-bptree = "0.4.1"
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }

[dev-dependencies]
bascoin-txscript.workspace = true
criterion.workspace = true
secp256k1.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
