[package]
name = "rothschild"
description = "Bascoin Transaction Generator"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bascoin-addresses.workspace = true
bascoin-consensus-core.workspace = true
bascoin-core.workspace = true
bascoin-grpc-client.workspace = true
bascoin-notify.workspace = true
bascoin-rpc-core.workspace = true
bascoin-txscript.workspace = true
bascoin-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
