[package]
name = "simpa"
description = "Bascoin Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bascoin-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first
bascoin-consensus-core.workspace = true
bascoin-consensus-notify.workspace = true
bascoin-consensus.workspace = true
bascoin-core.workspace = true
bascoin-database.workspace = true
bascoin-hashes.workspace = true
bascoin-utils.workspace = true

bascoin-cli = { path = "../cli", version = "1.0.1" }
bascoin-wallet-cli = { path = "../wallet/cli", version = "1.0.1" }
bascoin-core = { path = "../core" }
bascoin-rpc-client = { path = "../rpc/client", optional = true }
async-channel = "2.3"
async-trait = "0.1"

async-channel.workspace = true
cfg-if.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[features]
heap = ["dhat", "bascoin-alloc/heap"]
semaphore-trace = ["bascoin-utils/semaphore-trace"]

[lints]
workspace = true
