[package]
name = "bascoin-wasm"
description = "BASCOIN WASM bindings"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
repository.workspace = true
# wasm-pack requires this value to be a string
# (it can not be derived from the workspace)
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if.workspace = true
js-sys.workspace = true
bascoin-addresses.workspace = true
bascoin-bip32.workspace = true
bascoin-consensus-core.workspace = true
bascoin-consensus-wasm.workspace = true
bascoin-core.workspace = true
bascoin-math.workspace = true
bascoin-pow.workspace = true
bascoin-txscript.workspace = true
bascoin-rpc-core.workspace = true
bascoin-utils.workspace = true
bascoin-wasm-core.workspace = true
bascoin-wallet-core.workspace = true
bascoin-wallet-keys.workspace = true
bascoin-wrpc-client.workspace = true
bascoin-wrpc-wasm.workspace = true
num.workspace = true
wasm-bindgen.workspace = true
workflow-log.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

[features]
wasm32-sdk = [
    "bascoin-wallet-core/wasm32-sdk",
    "bascoin-pow/wasm32-sdk",
    "bascoin-txscript/wasm32-sdk",
]
wasm32-core = [
    "bascoin-wallet-core/wasm32-core",
    "bascoin-pow/wasm32-sdk",
    "bascoin-txscript/wasm32-sdk",
]
wasm32-rpc = [
    "bascoin-consensus-core/wasm32-sdk",
    "bascoin-consensus-wasm/wasm32-sdk",
    "bascoin-wrpc-client/wasm32-sdk",
    "bascoin-wrpc-wasm/wasm32-sdk",
]
wasm32-keygen = []
default = []

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[package.metadata.emanate.wasm]
targets = [
    { target = "nodejs", out-dir = "nodejs/bascoin" },
    { target = "web", out-dir = "web/bascoin" },
]
folder = "setup"

# Workaround for Rust 1.87.0
# https://github.com/rust-lang/rust/issues/141048
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O","--enable-bulk-memory"]

[lints]
workspace = true
