[package]
name = "bascoin-consensus-notify"
description = "Bascoin consensus notifier"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
futures.workspace = true
bascoin-consensus-core.workspace = true
bascoin-core.workspace = true
bascoin-hashes.workspace = true
bascoin-notify.workspace = true
bascoin-utils.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
triggered.workspace = true

[lints]
workspace = true
