[package]
name = "bascoin-pow"
description = "Bascoin proof-of-work"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = []

[dependencies]
js-sys.workspace = true
bascoin-consensus-core.workspace = true
bascoin-consensus-client.workspace = true
bascoin-hashes.workspace = true
bascoin-math.workspace = true
bascoin-utils.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true
num.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
