[package]
name = "bascoin-hashes"
description = "Bascoin hashing functions"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
no-asm = ["keccak"]

[dependencies]
blake2b_simd.workspace = true
borsh.workspace = true
derive_more.workspace = true
faster-hex.workspace = true
js-sys.workspace = true
bascoin-utils.workspace = true
keccak = { workspace = true, optional = true }
once_cell.workspace = true
serde.workspace = true
sha2.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true

[target.'cfg(any(target_os = "windows", not(target_arch = "x86_64")))'.dependencies]
keccak.workspace = true

[dev-dependencies]
criterion.workspace = true
rand.workspace = true
sha3.workspace = true

[build-dependencies]
cc.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
