[package]
name = "bascoin-merkle"
description = "Bascoin Merkle proofs"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bascoin-hashes.workspace = true
borsh.workspace = true
serde.workspace = true

[dev-dependencies]
rand.workspace = true

[lints]
workspace = true
