[package]
name = "bascoin-index-processor"
description = "Bascoin index processor"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bascoin-consensus-core.workspace = true
bascoin-consensus-notify.workspace = true
bascoin-consensusmanager.workspace = true
bascoin-core.workspace = true
bascoin-database.workspace = true
bascoin-hashes.workspace = true
bascoin-index-core.workspace = true
bascoin-notify.workspace = true
bascoin-utils.workspace = true
bascoin-utxoindex.workspace = true

async-channel.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ]}
triggered.workspace = true

[dev-dependencies]
bascoin-consensus.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
rand = {workspace = true,  features = [ "small_rng" ]}

[lints]
workspace = true