[package]
name = "bascoin-utxoindex"
description = "Bascoin UTXO index"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
bascoin-consensus-core.workspace = true
bascoin-consensusmanager.workspace = true
bascoin-core.workspace = true
bascoin-database.workspace = true
bascoin-hashes.workspace = true
bascoin-index-core.workspace = true
bascoin-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rocksdb.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
bascoin-consensus.workspace = true
rand = { workspace = true, features = ["small_rng"] }

[lints]
workspace = true
