[package]
name = "bascoin-p2p-flows"
description = "Bascoin p2p flows"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bascoin-core.workspace = true
bascoin-consensus-core.workspace = true
bascoin-consensus-notify.workspace = true
bascoin-p2p-lib.workspace = true
bascoin-p2p-mining.workspace = true
bascoin-utils.workspace = true
bascoin-utils-tower.workspace = true
bascoin-hashes.workspace = true
bascoin-muhash.workspace = true
bascoin-connectionmanager.workspace = true
bascoin-addressmanager.workspace = true
bascoin-consensusmanager.workspace = true
bascoin-mining.workspace = true
bascoin-notify.workspace = true

async-trait.workspace = true
futures = { workspace = true, features = ["alloc"] }
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { workspace = true, features = ["net"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
chrono.workspace = true

[lints]
workspace = true
