[package]
name = "bascoin-p2p-mining"
description = "Bascoin p2p mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bascoin-core.workspace = true
bascoin-consensus-core.workspace = true
bascoin-consensusmanager.workspace = true
bascoin-mining-errors.workspace = true
bascoin-hashes.workspace = true
bascoin-math.workspace = true
bascoin-p2p-lib.workspace = true
bascoin-utils.workspace = true
bascoin-utils-tower.workspace = true
log.workspace = true
tokio.workspace = true

[lints]
workspace = true
