[package]
name = "bascoin-rpc-core"
description = "Bascoin RPC core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = [
    "bascoin-consensus-client/wasm32-sdk",
    "bascoin-consensus-wasm/wasm32-sdk"
]

[dependencies]
bascoin-addresses.workspace = true
bascoin-consensus-core.workspace = true
bascoin-consensus-client.workspace = true
bascoin-consensus-notify.workspace = true
bascoin-consensus-wasm.workspace = true
bascoin-core.workspace = true
bascoin-hashes.workspace = true
bascoin-index-core.workspace = true
bascoin-math.workspace = true
bascoin-mining-errors.workspace = true
bascoin-notify.workspace = true
bascoin-txscript.workspace = true
bascoin-utils.workspace = true
bascoin-rpc-macros.workspace = true

async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
downcast.workspace = true
faster-hex.workspace = true
hex.workspace = true
js-sys.workspace = true
log.workspace = true
paste.workspace = true
rand.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-serializer.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
