[package]
name = "bascoin-rpc-service"
description = "Bascoin RPC service"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bascoin-addresses.workspace = true
bascoin-consensus-core.workspace = true
bascoin-consensus-notify.workspace = true
bascoin-consensusmanager.workspace = true
bascoin-core.workspace = true
bascoin-hashes.workspace = true
bascoin-index-core.workspace = true
bascoin-math.workspace = true
bascoin-mining.workspace = true
bascoin-notify.workspace = true
bascoin-p2p-flows.workspace = true
bascoin-p2p-lib.workspace = true
bascoin-p2p-mining.workspace = true
bascoin-txscript = { path = "../../crypto/txscript" }
bascoin-txscript-errors = { path = "../../crypto/txscript/errors" }
bascoin-utils.workspace = true
bascoin-utils-tower.workspace = true
bascoin-utxoindex.workspace = true

async-trait.workspace = true
log.workspace = true
tokio.workspace = true
triggered.workspace = true
workflow-rpc.workspace = true

[lints]
workspace = true