[package]
name = "bascoin-testing-integration"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bascoin-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first

bascoin-addresses.workspace = true
bascoin-bip32.workspace = true
bascoin-consensus-core.workspace = true
bascoin-consensus-notify.workspace = true
bascoin-consensus.workspace = true
bascoin-consensusmanager.workspace = true
bascoin-core.workspace = true
bascoin-database.workspace = true
bascoin-grpc-client.workspace = true
bascoin-grpc-core.workspace = true
bascoin-grpc-server.workspace = true
bascoin-hashes.workspace = true
bascoin-index-processor.workspace = true
bascoin-math.workspace = true
bascoin-merkle.workspace = true
bascoin-muhash.workspace = true
bascoin-notify.workspace = true
bascoin-pow.workspace = true
bascoin-rpc-core.workspace = true
bascoin-rpc-service.workspace = true
bascoin-txscript.workspace = true
bascoin-utils.workspace = true
bascoin-utxoindex.workspace = true
bascoin-wrpc-server.workspace = true
bascoind.workspace = true

async-channel.workspace = true
async-trait.workspace = true
bincode.workspace = true
clap.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
dhat = { workspace = true, optional = true }
faster-hex.workspace = true
flate2.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde.workspace = true
smallvec.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
workflow-perf-monitor.workspace = true

[dev-dependencies]
criterion.workspace = true
rand = { workspace = true, features = ["small_rng"] }
tokio = { workspace = true, features = ["rt", "macros", "process"] }
bascoin-txscript-errors.workspace = true

[features]
heap = ["dhat"]
html_reports = []
devnet-prealloc = ["bascoind/devnet-prealloc"]

[lints]
workspace = true
