[package]
name = "bascoin-wallet-keys"
description = "Bascoin wallet key primitives"
keywords = ["bascoin", "wallet"]
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
async-trait.workspace = true
borsh.workspace = true
downcast.workspace = true
faster-hex.workspace = true
hmac.workspace = true
js-sys.workspace = true
bascoin-addresses.workspace = true
bascoin-bip32.workspace = true
bascoin-consensus-core.workspace = true
bascoin-txscript-errors.workspace = true
bascoin-txscript.workspace = true
bascoin-utils.workspace = true
bascoin-wasm-core.workspace = true
rand.workspace = true
ripemd.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true
zeroize.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
