[package]
name = "bascoin-wrpc-simple-client-example"
description = "Bascoin wRPC simple client example"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
bascoin-rpc-core.workspace = true
bascoin-wrpc-client.workspace = true
tokio.workspace = true


[lints]
workspace = true
