[package]
name = "bascoin-wrpc-example-subscriber"
description = "Bascoin wRPC subscription example"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
bascoin-consensus-core.workspace = true
bascoin-rpc-core.workspace = true
bascoin-wrpc-client.workspace = true
bascoin-notify.workspace = true
tokio.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
ctrlc.workspace = true

[lints]
workspace = true
